--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "next": "14.2.9",
     "pretendard": "^1.3.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
