--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "pretendard": "^1.3.9",
     "react": "^18",
     "react-dom": "^18",
+    "rehype": "^13.0.1",
+    "rehype-pretty-code": "^0.14.0",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
+    "shiki": "^1.17.0",
     "unified": "^11.0.5"
   },
   "devDependencies": {
